# test_VS2017_CMake

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
0_test_cmake_project/: CMakeLists.txt  example_glfw.cpp  main.cpp
0_test_cmake_project/src/: CMakeLists.txt
CMake_modules/: FindGLFW.cmake
src/: CMakeLists.txt  documentation.cpp  getting_started.cpp  getting_started_old.cpp
